[package]
name = "dpf"
version = "0.2.0"
authors = [ "Matan Hamilis <matan.hamilis@gmail.com>" ]
edition = "2021"
description = "A crate for the management of Distributed Point Functions"
repository = "https://github.com/MatanHamilis/DPF/" 
license = "MIT"
keywords = [ "cryptography", "MPC", "DPF" ]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8"
once_cell = "1.14"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "dpf"
harness = false